--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -16,38 +16,58 @@ img {
   height: auto;
 }
 
+.sw-quote {
+  font-size: 0.8em;
+  font-weight: 400;
+}
+
 .website-meta {
   margin-top: 1em;
 }
 
 .artist-container {
+  text-align: center;
   display: grid;
   grid-template-columns: repeat(2, auto);
 }
 .album-container {
-  margin: 0.3em;
   text-align: center;
-  padding: 0.6em;
+  padding: 1em;
+  margin-top: 1em;
 }
 .album-cover {
   width: 90%;
   height: auto;
   max-width: 160px;
-  margin-bottom: 0.3em;
+  margin-bottom: 0.5em;
 }
 .album-title {
-  font-size: 0.7em;
-  font-weight: 500;
-  margin-bottom: 0.3em;
+  font-weight: 600;
+  margin-bottom: 0.5em;
 }
 .album-artist {
-  font-size: 0.6em;
-  font-weight: 600;
+  font-size: 0.9em;
+  font-weight: 400;
+  margin-bottom: 1em;
 }
 
 .album-view-btn {
   width: 100px;
   text-transform: uppercase;
-  margin-top: 9px;
   font-weight: 400;
+}
+
+/*  */
+@media (min-width: 480px) {
+  .artist-container {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+  }
+}
+
+@media (min-width: 1024px) {
+  .artist-container {
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+  }
 }
