--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -77,11 +77,16 @@ footer {
   justify-content: space-between;
   width: 30vw;
   margin: 0 auto;
-  font-size: 2.4em;
+  font-size: 2.1em;
 }
 
-.social-nav i {
+.social-nav a {
+  color: hsl(0, 0%, 91%);
   margin: 0.3em;
+  text-decoration: none;
+}
+.social-nav a:hover {
+  color: rgba(0, 0, 0, 0.99);
 }
 
 /*  */
