--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: "Nunito Sans", sans-serif;
-  line-height: 1.2;
+  line-height: 1.3;
   color: rgba(0, 0, 0, 0.99);
   background-color: rgba(241, 241, 241, 0.95);
 }
@@ -17,14 +17,13 @@ img {
   width: 100%;
   height: auto;
 }
-
+/* header */
+.website-meta {
+  margin-top: 1em;
+}
 .sw-quote {
   font-size: 0.8em;
   font-weight: 400;
-}
-
-.website-meta {
-  margin-top: 1em;
 }
 
 .artist-container {
