--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -62,13 +62,14 @@ footer {
   color: hsl(0, 0%, 91%);
   /* background-color: hsla(0, 0%, 0%, 0.9); */
   background-color: #d82332;
-  height: 15vh;
+  height: 20vh;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-evenly;
   align-items: center;
   align-content: center;
   text-align: center;
+  font-weight: 500;
 }
 
 .social-nav {
@@ -76,7 +77,7 @@ footer {
   justify-content: space-between;
   width: 30vw;
   margin: 0 auto;
-  font-size: 2.1em;
+  font-size: 2em;
 }
 
 .social-nav a {
