--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap");
 
 * {
   margin: 0;
@@ -8,7 +8,7 @@
 
 body {
   font-family: "Nunito Sans", sans-serif;
-  line-height: 1.3;
+  line-height: 1.5;
   color: rgba(0, 0, 0, 0.99);
   background-color: rgba(241, 241, 241, 0.95);
 }
@@ -25,6 +25,17 @@ a {
 /* header */
 header {
   padding: 1em;
+}
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  font-size: 1.2em;
+  font-weight: 300;
+}
+
+.navbar a {
+  margin: 0.5em;
 }
 .website-meta {
   margin-top: 1em;
@@ -71,6 +82,7 @@ footer {
   /* background-color: hsla(0, 0%, 0%, 0.9); */
   background-color: #d82323;
   height: 20vh;
+  width: 100%;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-evenly;
@@ -94,6 +106,18 @@ footer {
 }
 .social-nav a:hover {
   color: rgba(0, 0, 0, 0.99);
+}
+
+/* Bio SW */
+
+.bio-container {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  margin: 1em;
+}
+.bio-container p {
+  margin-top: 0.5em;
 }
 
 /*  */
