--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -29,13 +29,15 @@ header {
 
 .navbar {
   display: flex;
-  justify-content: center;
-  font-size: 1.2em;
+  justify-content: space-evenly;
+  font-size: 1.1em;
   font-weight: 300;
+  width: 60vw;
+  margin: 0 auto;
 }
 
 .navbar a {
-  margin: 0.5em;
+  margin: 1em;
 }
 .website-meta {
   margin-top: 1em;
