--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -99,7 +99,7 @@ footer {
   color: hsl(0, 0%, 91%);
   /* background-color: hsla(0, 0%, 0%, 0.9); */
   background-color: rgba(0, 0, 0, 0.99);
-  height: 12vh;
+  height: 15vh;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -108,6 +108,8 @@ footer {
   align-content: center;
   text-align: center;
   font-weight: 500;
+  font-size: 0.8em;
+  margin-bottom: 0;
   padding: 1em;
 }
 
